# pizza

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  nuxt.config.ts  okteto.yml  package.json  pnpm-lock.yaml  turbo.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: pr_template.md
.github/workflows/: cd-dev.yml  cd.yml  ci.yml  close-preview.yml  golangci-lint.yml  preview.yml  release-api-blog-tag.yml  release-api.yml  release-noisy-boi.yml
apps/admin-nuxt/: app.vue  index.spec.ts  nuxt.config.ts  package.json  tsconfig.json
apps/api/: .air.toml  .dockerignore  .env  .eslintignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  main.go  package.json  tsconfig.json  vite.config.ts
apps/api-blog/: Dockerfile  README.md  bench.yaml  go.mod  go.sum  main.go
apps/express/: Dockerfile  env.d.ts  package.json  vite.config.ts
apps/noisy-boi/: Cargo.toml  Dockerfile  bench.yaml
apps/noisy-boi/migrations/: 20230420032643_notification_object.down.sql  20230420032649_notification.up.sql
apps/noisy-boi/misc/: 20230420032643_notification_object.up.sql  20230420032652_notification_change.down.sql  20230420032652_notification_change.up.sql
apps/noisy-boi/src/: main.rs  misc.rs  redis_subscriber.rs  swagger.rs
apps/noisy-boi/src/common/: app_state.rs  auth_guard.rs  from_db_flatten.rs  mod.rs
apps/noisy-boi/src/config/: config.json  mod.rs
apps/noisy-boi/src/notification/: broadcaster.rs  handlers.rs  mod.rs  repository.rs
apps/noisy-boi/src/notification/entities/: comment.rs  mod.rs  notification.rs  notification_change.rs  notification_object.rs  post.rs  user.rs
apps/web/: jest.config.js  package.json  tailwind.config.js  (+2 more)
apps/web-nuxt/: .eslintrc.js  .npmrc  app.vue  main.css  nuxt.config.ts  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.mjs
k8s/: api-deployment.yml  api-svc.yml  namespace.yml  redis.yml
script/: compose-start.sh
(+329 files in other folders)
