[package]
name = "noisy-boi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
parking_lot = "0.12.1"
redis-async = "0.16.0"
sea-query = { version = "0.28.4", features = ["thread-safe", "with-chrono", "backend-postgres", "derive"] }
sea-query-binder = { version = "0.3.0", features = ["sqlx-postgres", "with-chrono", "runtime-tokio-native-tls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
